--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://sandbox-d.ea-shutto-translation.net/trans.js?id=66230"></script>
     <title>Document</title>
 </head>
 <body>
     <div>
         Hoangt DZ
+    </div>
+    <div>
+        Xin chào hôm nay là ngày 2/4/2025
     </div>
 </body>
 </html>
