--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://sandbox-d.ea-shutto-translation.net/trans.js?id=66230"></script>
+    <script src="https://sandbox-d.ea-shutto-translation.net/trans.js?id=6623011"></script>
     <title>Document</title>
 </head>
 <body>
