--- a/about.html
+++ b/about.html
@@ -1,17 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
+  
 <head>
+     <script src="https://dev-d.sc-shutto-translation.com/trans.js?id=543"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://sandbox-d.ea-shutto-translation.net/trans.js?id=6623011"></script>
-    <title>Document</title>
+    <title>Mywebsite</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>
-        About page
-    </div>
-    <div>
-        Xin chào hôm nay là ngày 2/4/2025
-    </div>
+    <header>
+        <h1>私のウェブサイトへようこそ！</h1>
+    </header>
+
+    <main>
+        <p id="greeting">
+            こんにちは！私の名前はランです。私はCowell社のテスターです。
+        </p>
+
+        <!-- Hình ảnh từ internet -->
+        <img 
+            src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e"
+            alt="Ảnh phong cảnh"
+            width="300"
+        >
+
+        <button onclick="showMessage()">詳細情報を見る</button>
+    </main>
+
+    <script src="script.js"></script>
 </body>
 </html>
