--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
 
         <!-- Hình ảnh từ internet -->
         <img 
-            src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e"
+            src="/about.png"
             alt="Ảnh phong cảnh"
             width="300"
         >
