--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
 
         <!-- Hình ảnh từ internet -->
         <img 
-            src="/about.png"
+            src="/images/about.png"
             alt="Ảnh phong cảnh"
             width="300"
         >
